# pychub-build-plugins

./: .gitignore  README.md  build-wheels.sh  pyproject.toml  setup.sh
.github/actions/python-poetry/: action.yml
.github/workflows/: workflow.yml
hatch/: pyproject.toml
pdm/: pyproject.toml
poetry/: README.md  pyproject.toml
poetry/src/pychub_poetry_plugin/: plugin.py
tests/integration/: conftest.py
tests/integration/hatch/test_proj/: pyproject.toml
tests/integration/hatch/test_proj/includes/: README.md
tests/integration/hatch/test_proj/scripts/: pre_script.sh
tests/integration/hatch/test_proj/test_pkg/: __init__.py
tests/integration/hatch/tests/: test_hatch.py
tests/integration/pdm/test_proj/: pyproject.toml
tests/integration/pdm/test_proj/includes/: info.txt
tests/integration/pdm/test_proj/scripts/: post_script.sh
tests/integration/pdm/test_proj/test_pkg/: __init__.py  greet.py
tests/integration/pdm/tests/: test_pdm.py
tests/integration/poetry/test_proj/: pyproject.toml
tests/integration/poetry/test_proj/includes/: test.cfg  test.txt
tests/integration/poetry/test_proj/test_pkg/: __init__.py
tests/integration/poetry/tests/: test_poetry.py
