[project]
name = "pychub-build-plugins"
version = "0.2.0"
description = "Build tool plugin collection for pychub"
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
readme = "README.md"
license = "MIT"
dynamic = [ "dependencies" ]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    'tomli>=2.2; python_version < "3.11"',
    "hatch>=1.14.0",
    "pdm>=2.25.0"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pychub = "^1.0.0"
pychub-hatch-plugin  = { path = "hatch",  develop = true }
pychub-pdm-plugin    = { path = "pdm",    develop = true }
pychub-poetry-plugin = { path = "poetry", develop = true }

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../pychub-build-plugins"

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
