[project]
name = "pychub-build-plugins"
version = "1.0.4"
description = "Build tool plugin collection for pychub"
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities"
]
keywords = [
    "bundle",
    "chub",
    "executable",
    "package",
    "packaging",
    "zipapp"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pychub = "^1.1.0"
pychub-hatch-plugin  = { path = "hatch",  develop = true }
pychub-pdm-plugin    = { path = "pdm",    develop = true }
pychub-poetry-plugin = { path = "poetry", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1"

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
