[project]
name = "pychub-hatch-plugin"
version = "0.1.0"
description = "Hatch build plugin for pychub"
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
dependencies = [
    "pychub>=0.1.0",
    "hatchling>=1.27.0"
]
packages = [{ include = "pychub_hatch_plugin", from = "src" }]
requires-python = "^3.9"
classifiers = [
  "Framework :: Hatch",
]

[project.entry-points.hatch]
pychub = "pychub_hatch_plugin.hooks"

[tool.poetry.dependencies]
pychub = { source = "kdp-pypi" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
