[project]
name = "pychub-pdm-plugin"
version = "0.1.0"
description = "Pdm build plugin for pychub"
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
dependencies = [
    "pychub>=1.0.0",
    "pdm>=2.25.0,<3.0.0"
]
packages = [{ include = "pychub_pdm_plugin", from = "src" }]
requires-python = ">=3.9"

[project.entry-points."pdm.build.hook"]
pychub = "pychub_pdm_plugin.plugin:PychubBuildHook"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
